fix mini form alignment issues

--- a/src/components/CalorieCalc.css
+++ b/src/components/CalorieCalc.css
@@ -21,6 +21,12 @@ form {
 	max-width: 600px;
 }
 
+.form_inputs[data-show-results="true"]{
+	flex-wrap: nowrap;
+	flex-direction: column;
+	align-items: start;
+}
+
 fieldset {
 	--group-width: 8em;
 	--icon-height: 4em;
@@ -174,11 +180,7 @@ form[data-show-results="true"] {
 	width: 300px;
 }
 
-.option_wrapper[data-show-results="true"]{
-	flex-wrap: nowrap;
-	flex-direction: column;
-	align-items: start;
-}
+
 
 .option_wrapper > h3 {
 	font-weight: bold;
